Bump for JRuby-9.2.11.0